# cpscribe

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.githooks/: pre-commit
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-trigger.yml  release.yml
src/cpscribe/: __main__.py  cli.py  config.py  generator.py  scraper.py
tests/: conftest.py  test_generator.py  test_scraper.py
